fix: adds align-self

--- a/src/blocks/basket-order/basket-order.css
+++ b/src/blocks/basket-order/basket-order.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
+  align-self: flex-start;
 }
 
 @media screen and (min-width: 1024px) {
